--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Idontknow-why</title>
   <link rel="icon" type="image/png" href="ico.png"/>
-  <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
+  <meta name="description" content="A simple 24/7 stress relief instrumental music">
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
