--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 
 
 <!-- particles.js container -->
-<div class="header">
-  <div id="particles-js">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/NuIAYHVeFYs?autoplay=1" style="width:0;height:0;border:0; border:none;"></iframe>
-  </div>
-  <div class="text">
-    <p>The day she let go of the things that were weighing her down, was the day she began to shine the brightest.</p>
-  </div>
+<div id="particles-js">
 </div>
+  <iframe src="https://www.youtube.com/embed/NuIAYHVeFYs?autoplay=1"
+    style="width:0;height:0;border:0; border:none; position: absolute;"></iframe>
+
+<div class="text">
+  <p>The day she let go of the things that were weighing her down, was the day she began to shine the brightest.</p>
+</div>
+
 <!-- scripts -->
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
