mobile auto play

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
+  <script src="js/mobile.js"></script>
 </head>
 <body>
 
@@ -17,7 +18,7 @@
 <!-- particles.js container -->
 <div id="particles-js">
 </div>
-  <iframe src="https://www.youtube.com/embed/NuIAYHVeFYs?autoplay=1"
+  <iframe id="player" src="https://www.youtube.com/embed/NuIAYHVeFYs?autoplay=1"
     style="width:0;height:0;border:0; border:none; position: absolute;"></iframe>
 
 <div class="text">
