--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <!-- particles.js container -->
 <div id="particles-js">
 </div>
-  <iframe id="player" src="https://www.youtube.com/embed/NuIAYHVeFYs?autoplay=1"
-    style="width:0;height:0;border:0; border:none; position: absolute;"></iframe>
-
+  <embed src="https://www.youtube.com/embed/NuIAYHVeFYs?autoplay=1" 
+  style="width:0;height:0;border:0; border:none; position: absolute;"/>
 <div class="text">
   <p>The day she let go of the things that were weighing her down, was the day she began to shine the brightest.</p>
 </div>
