--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- particles.js container -->
 <div id="particles-js">
 </div>
-  <iframe src="https://www.youtube.com/embed/NuIAYHVeFYs?autoplay=1" 
+  <iframe src="https://www.youtube.com/embed/NuIAYHVeFYs?autoplay=1&mute=0" allow="autoplay" 
   style="width:0;height:0;border:0; border:none; position: absolute;">
   </iframe>
 <div class="text">
