--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
-  <script src="js/mobile.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
 
-<!-- count particles -->
-
+<script>
+  alert("A gentle reminder before we start: you're doing amazing sweetie, stay home, stay safe, save lives.");
+</script>
 
 <!-- particles.js container -->
 <div id="particles-js">
@@ -21,14 +22,20 @@
   <iframe src="https://www.youtube.com/embed/NuIAYHVeFYs?autoplay=1&mute=0" allow="autoplay" 
   style="width:0;height:0;border:0; border:none; position: absolute;">
   </iframe>
+
 <div class="text">
-  <p>The day she let go of the things that were weighing her down, was the day she began to shine the brightest.</p>
+  <div class="wrap">
+    <ul id="sentence">
+      <ul id="textSlider">
+      </ul>
+    </ul>
+  </div>
 </div>
 
 <!-- scripts -->
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
-
+<script src="js/changetext.js"></script>
 <!-- stats.js -->
 <script>
   var count_particles, stats, update;
@@ -50,5 +57,7 @@
   requestAnimationFrame(update);
 </script>
 
+
+</script>
 </body>
 </html>
