--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:site_name" content="Idontknow-why">
-  <meta property="og:image" content="thumb.png">
+  <meta property="og:image" content="https://idontknow-why.github.io/images/thumb.png">
   <meta property="og:url" content="https://idontknow-why.github.io/">
   <title>Idontknow-why</title>
   <link rel="icon" type="image/png" href="ico.png"/>
